--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
             <div class="right">
                 <div class="slogan">
-                    <h2>今天是個————</h2>
+                    <h2>今天是個———</h2>
                     <h2>吃甜點的好日子。</h2>
                 </div>
                 <p>© 2018 Sweetaste* All Rights Reserved</p>
