--- a/index.html
+++ b/index.html
@@ -100,51 +100,54 @@
                         <ul class="item_info">
                             <li><h2>焦糖馬卡龍</h2></li>
                             <li>NT$ 450</li>
-                        </ul>
+                   s     </ul>
                         <a href="#">加入購物車</a>
                     </div>
                 </div>
             </div>
-            <ul class="item_pages">
-                <li><a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_left.png?raw=true" alt="left"></a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_right.png?raw=true" alt="right"></a></li>
-            </ul>
+            <div class="item_pages">
+                <a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_left.png?raw=true" alt="left"></a>
+                <a href="#" class="item_page">1</a>
+                <a href="#" class="item_page">2</a>
+                <a href="#" class="item_page">3</a>
+                <a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_right.png?raw=true" alt="right"></a>
+            </div>
         </div>
         <div class="subscription">
-            <div class="instruction">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-light.svg" alt="S*">
-                <p>訂閱你我的甜蜜郵件</p> 
+            <div class="container">
+                <div class="instruction">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-light.svg" alt="S*">
+                    <p>訂閱你我的甜蜜郵件</p> 
+                </div>
+                <form action="#">
+                    <input type="text" name="mail" class="mail">
+                    <input type="image" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_forward-24px.png?raw=true" onClick="document.formname.submit();" class="submit">
+                </form>
             </div>
-            
-            <form action="#">
-                <input type="text" name="mail" class="mail">
-                <input type="image" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_forward-24px.png?raw=true" onClick="document.formname.submit();" class="submit">
-            </form>
         </div>
         <div class="footer">
-            <div class="left">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-lg-dark.svg" alt="Sweetast*">
-                <div class="contact">
-                    <ul>
-                        <li>07-1234-5678</li>
-                        <li>sweetaste@email.com</li>
-                        <li>800 高雄市新興區幸福路 520 號</li>
-                    </ul>
-                    <div class="social_links">
-                        <a><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/ic-line%40.svg" alt="line@"></a>
-                        <a><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/ic-facebook.svg" alt="facebook"></a>
+            <div class="container">
+                <div class="left">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-lg-dark.svg" alt="Sweetast*">
+                    <div class="contact">
+                        <ul>
+                            <li>07-1234-5678</li>
+                            <li>sweetaste@email.com</li>
+                            <li>800 高雄市新興區幸福路 520 號</li>
+                        </ul>
+                        <div class="social_links">
+                            <a><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/ic-line%40.svg" alt="line@"></a>
+                            <a><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/ic-facebook.svg" alt="facebook"></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="right">
-                <div class="slogan">
-                    <h2>今天是個———</h2>
-                    <h2>吃甜點的好日子。</h2>
+                <div class="right">
+                    <div class="slogan">
+                        <h2>今天是個———</h2>
+                        <h2>吃甜點的好日子。</h2>
+                    </div>
+                    <p>© 2018 Sweetaste* All Rights Reserved</p>
                 </div>
-                <p>© 2018 Sweetaste* All Rights Reserved</p>
             </div>
         </div>
     </body>
