--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <ul class="item_info">
                             <li><h2>焦糖馬卡龍</h2></li>
                             <li>NT$ 450</li>
-                   s     </ul>
+                        </ul>
                         <a href="#">加入購物車</a>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                 </div>
                 <form action="#">
                     <input type="text" name="mail" class="mail">
-                    <input type="image" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_forward-24px.png?raw=true" onClick="document.formname.submit();" class="submit">
+                    <button onClick="document.formname.submit();" class="submit"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_forward-24px.png?raw=true" alt="submit"></button>
                 </form>
             </div>
         </div>
