--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="navbar">
+            <div class="navbar" data-aos="fade-down">
                 <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/dehaze-24px.png?raw=true" alt="hamburger menu" class="ham_menu">
                 <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="Sweetast*" class="logo">
                 <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg" alt="Sweetast*" class="logo_768px">
@@ -21,17 +21,17 @@
                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true" alt="購物車">    
                 </div>
             </div>
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/banner.png?raw=true" alt="標題圖" class="banner">
+            <img data-aos="zoom-out" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/banner.png?raw=true" alt="標題圖" class="banner">
             <div class="content">
                 <ul class="category">
-                    <li><h3>甜點類別</h3></li>
-                    <li><a href="#">所有甜點 (48)</a></li>
-                    <li><a href="#">本日精選 (10)</a></li>
-                    <li><a href="#">人氣推薦 (26)</a></li>
-                    <li><a href="#">新品上市 (12)</a></li>
+                    <li data-aos="fade-right"><h3>甜點類別</h3></li>
+                    <li data-aos="fade-right"><a href="#">所有甜點 (48)</a></li>
+                    <li data-aos="fade-right"><a href="#">本日精選 (10)</a></li>
+                    <li data-aos="fade-right"><a href="#">人氣推薦 (26)</a></li>
+                    <li data-aos="fade-right"><a href="#">新品上市 (12)</a></li>
                 </ul>
                 <div class="items">
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -43,7 +43,7 @@
                         </ul>
                         <a href="#">加入購物車</a>
                     </div>
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -55,7 +55,7 @@
                         </ul>
                         <a href="#">加入購物車</a>
                     </div>
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -67,7 +67,7 @@
                         </ul>
                         <a href="#">加入購物車</a>
                     </div>
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -79,7 +79,7 @@
                         </ul>
                         <a href="#">加入購物車</a>
                     </div>
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -91,7 +91,7 @@
                         </ul>
                         <a href="">加入購物車</a>
                     </div>
-                    <div class="item">
+                    <div data-aos="zoom-out" class="item">
                         <div class="item_img">
                             <div class="selected"><p>本日精選</p></div>
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="favorite" class="favorite">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item_pages">
+            <div data-aos="fade-left" class="item_pages">
                 <a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_left.png?raw=true" alt="left"></a>
                 <a href="#" class="item_page">1</a>
                 <a href="#" class="item_page">2</a>
@@ -113,7 +113,7 @@
                 <a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_right.png?raw=true" alt="right"></a>
             </div>
         </div>
-        <div class="subscription">
+        <div data-aos="fade-up" class="subscription">
             <div class="container">
                 <div class="instruction">
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-light.svg" alt="S*">
@@ -125,7 +125,7 @@
                 </form>
             </div>
         </div>
-        <div class="footer">
+        <div data-aos="fade-up"  class="footer">
             <div class="container">
                 <div class="left">
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-lg-dark.svg" alt="Sweetast*">
@@ -150,5 +150,12 @@
                 </div>
             </div>
         </div>
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                once: true,
+            });
+        </script>
     </body>
 </html>
