--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div data-aos="fade-up" class="subscription">
             <div class="container">
                 <div class="instruction">
-                    <img src="/img/logo-light.svg" alt="S*">
+                    <img src="img/logo-light.svg" alt="S*">
                     <p>訂閱你我的甜蜜郵件</p> 
                 </div>
                 <form action="#">
