--- a/checkout.html
+++ b/checkout.html
@@ -26,11 +26,11 @@
                         <div class="title">
                             <h2>發票</h2>
                             <div class="status">
-                                <img src="/img/check_circle-24px.svg" alt="完成">
+                                <img src="img/check_circle-24px.svg" alt="完成">
                                 <div class="line"></div>
-                                <img src="/img/check_circle-24px.svg" alt="完成">
+                                <img src="img/check_circle-24px.svg" alt="完成">
                                 <div class="line"></div>
-                                <img src="/img/circle_checked-24px.svg" alt="進行">
+                                <img src="img/circle_checked-24px.svg" alt="進行">
                             </div>
                         </div>
                         <div class="receipt_type">
@@ -65,21 +65,21 @@
                         <h2>購物清單</h2>
                         <ul>
                             <li>
-                                <img src="/img/l-1.jfif" alt="">
+                                <img src="img/l-1.jfif" alt="">
                                 <div class="list_info">
                                     <p>焦糖馬卡龍 (2)</p>
                                     <h3>NT$ 900</h3>
                                 </div> 
                             </li>
                             <li>
-                                <img src="/img/p-5.png" alt="">
+                                <img src="img/p-5.png" alt="">
                                 <div class="list_info">
                                     <p>焦糖馬卡龍 (2)</p>
                                     <h3>NT$ 900</h3>
                                 </div> 
                             </li>
                             <li>
-                                <img src="/img/p-3.png" alt="">
+                                <img src="img/p-3.png" alt="">
                                 <div class="list_info">
                                     <p>焦糖馬卡龍 (2)</p>
                                     <h3>NT$ 900</h3>
