--- a/checkout.html
+++ b/checkout.html
@@ -17,7 +17,7 @@
                     <li><a href="#">甜點</a></li>
                     <li><a href="#">登入</a></li>
                 </ul>
-                <span class="material-icons">shopping_cart</span>   
+                <a href="checkout.html"><span class="material-icons">shopping_cart</span></a> 
             </div>
         </div>
         <div class="checkout">
